update dz6 footer

--- a/index.html
+++ b/index.html
@@ -393,6 +393,24 @@
           </li>
         </ul>
       </div>
+      <div class="footer-subscription">
+        <label for="footer-mail" class="footer-subscription-title">Подпишитесь на рассылку</label>
+        <form action="" class="footer-subscription-form">
+          <input 
+            type="email"
+            name="footer-user-mail"
+            class="footer-subscription-mail"
+            id="footer-mail"
+            placeholder="E-mail"
+            required 
+          />
+          <button type="submit" class="btn footer-subscription-btn">Подписаться
+            <svg class="footer-subscription-btn-icon" width="20" height="20">
+              <use href="./img/symbol-defs.svg#icon-telegram"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </div>
   </footer>
   <!--backdrop-->
