--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" />
   <link rel="stylesheet" href="./styles/styles.css" />
-  <title>DZ5 Portfolio</title>
+  <title>DZ6 Portfolio</title>
 </head>
 
 <body>
@@ -264,8 +264,8 @@
       <div class="footer-subscription">
         <label for="footer-mail" class="footer-subscription-title">Подпишитесь на рассылку</label>
         <form action="" class="footer-subscription-form">
-          <input type="email" name="footer-user-mail" class="footer-subscription-mail" id="footer-mail" placeholder="E-mail"
-            required />
+          <input type="email" name="footer-user-mail" class="footer-subscription-mail" id="footer-mail"
+            placeholder="E-mail" required />
           <button type="submit" class="btn footer-subscription-btn">Подписаться
             <svg class="footer-subscription-btn-icon" width="20" height="20">
               <use href="./img/symbol-defs.svg#icon-telegram"></use>
