--- a/index.html
+++ b/index.html
@@ -445,12 +445,13 @@
               <use href="./img/symbol-defs.svg#icon-person"></use>
             </svg>
           </span>
-          <label class="modal-form-label">Телефон</label>
+          <label class="modal-form-label" for="user-phone">Телефон</label>
           <span class="icon-wrapper">
             <input
               name="user-phone"
               type="tel"
               class="modal-form-input"
+              id="user-phone"
               required
               pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
               title="xxx-xxx-xx-xx"
@@ -459,9 +460,9 @@
               <use href="./img/symbol-defs.svg#icon-phone"></use>
             </svg>
           </span>
-          <label class="modal-form-label">Почта </label>
+          <label class="modal-form-label" for="user-mail">Почта </label>
           <span class="icon-wrapper">
-            <input name="user-mail" type="email" class="modal-form-input" />
+            <input name="user-mail" type="email" class="modal-form-input" id="user-mail"/>
             <svg class="modal-icon" width="18" height="18">
               <use href="./img/symbol-defs.svg#icon-email"></use>
             </svg>
