--- a/portfolio.html
+++ b/portfolio.html
@@ -208,73 +208,73 @@
     </section>
   </main>
   <!--footer-->
-  <footer class="footer">
-    <div class="conteiner footer-wraper">
-      <div class="address-wraper">
-        <a class="logo-footer link" href="index.html">Web<span class="logofooter">studio</span></a>
-        <address>
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a class="footer-map link" href="https://goo.gl/maps/QaSQcrVwAwJUvmYh8" target="_blank" rel="">м. Київ,
-                пр-т
-                Лесі Українки, 26</a>
+    <footer class="footer">
+      <div class="conteiner footer-wraper">
+        <div class="address-wraper">
+          <a class="logo-footer link" href="index.html">Web<span class="logofooter">studio</span></a>
+          <address>
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a class="footer-map link" href="https://goo.gl/maps/QaSQcrVwAwJUvmYh8" target="_blank" rel="">м. Київ, пр-т
+                  Лесі Українки, 26</a>
+              </li>
+              <li class="footer-item">
+                <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-item">
+                <a class="contact-link link" href="tel:+380961111111">+380961111111</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="join">
+          <h3 class="join-title">присоединяйтесь</h3>
+          <ul class="team-social-list list">
+            <li class="team-social-item">
+              <a href="" class="team-link join-social-link link">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="team-social-item">
+              <a href="" class="team-link join-social-link link">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="contact-link link" href="tel:+380961111111">+380961111111</a>
+            <li class="team-social-item">
+              <a href="" class="team-link join-social-link link">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-social-item">
+              <a href="" class="team-link join-social-link link">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
+        <div class="footer-subscription">
+          <label for="footer-mail" class="footer-subscription-title">Подпишитесь на рассылку</label>
+          <form action="" class="footer-subscription-form">
+            <input type="email" name="footer-user-mail" class="footer-subscription-mail" id="footer-mail"
+              placeholder="E-mail" required />
+            <button type="submit" class="btn footer-subscription-btn">
+              Подписаться
+              <svg class="footer-subscription-btn-icon" width="20" height="20">
+                <use href="./img/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
-      <div class="join">
-        <h3 class="join-title">присоединяйтесь</h3>
-        <ul class="team-social-list list">
-          <li class="team-social-item">
-            <a href="" class="team-link join-social-link link">
-              <svg class="social-svg" width="20" height="20">
-                <use href="./img/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="team-social-item">
-            <a href="" class="team-link join-social-link link">
-              <svg class="social-svg" width="20" height="20">
-                <use href="./img/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="team-social-item">
-            <a href="" class="team-link join-social-link link">
-              <svg class="social-svg" width="20" height="20">
-                <use href="./img/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="team-social-item">
-            <a href="" class="team-link join-social-link link">
-              <svg class="social-svg" width="20" height="20">
-                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-subscription">
-        <label for="footer-mail" class="footer-subscription-title">Подпишитесь на рассылку</label>
-        <form action="" class="footer-subscription-form">
-          <input type="email" name="footer-user-mail" class="footer-subscription-mail" id="footer-mail"
-            placeholder="E-mail" required />
-          <button type="submit" class="btn footer-subscription-btn">Подписаться
-            <svg class="footer-subscription-btn-icon" width="20" height="20">
-              <use href="./img/symbol-defs.svg#icon-telegram"></use>
-            </svg>
-          </button>
-        </form>
-      </div>
-    </div>
-  </footer>
+    </footer>
   </div>
 </body>
 
